@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+01-Feb-2010 Christophe Demko
+# Corrected a bug in installation joomla.sql file
+# Corrected parse_ini_file for php version >= 5.3.0 (does not deal correctly with _QQ_ defined constant)
+
 01-Feb-2010 Hannes Papenberg
 # Fixed com_search router and model
 
